--- a/sojamaggus-site/index.html
+++ b/sojamaggus-site/index.html
@@ -10,7 +10,8 @@
   <h1>Sojamaggus sagt...</h1>
 
   <!-- Figur -->
-  <img id="sojamaggus" src="images/sojamaggus_closed.png" alt="Sojamaggus">
+  <img src="images/soeder.png" alt="Söder">
+
 
   <!-- Sprechblase -->
   <div id="speech-bubble">Tippe ein Thema ein und klick auf "Sag was!"</div>
@@ -24,3 +25,4 @@
   <script src="js/script.js"></script>
 </body>
 </html>
+
