--- a/sojamaggus-site/index.html
+++ b/sojamaggus-site/index.html
@@ -10,7 +10,7 @@
   <h1>Sojamaggus sagt...</h1>
 
   <!-- Figur -->
-  <img src="images/soeder.png" alt="Söder">
+  <img src="images/sojamaggus_closed.PNG" alt="Söder">
 
 
   <!-- Sprechblase -->
@@ -25,4 +25,5 @@
   <script src="js/script.js"></script>
 </body>
 </html>
+
 
