--- a/sojamaggus-site/index.html
+++ b/sojamaggus-site/index.html
@@ -27,6 +27,10 @@
 
     <script src="script.js"></script>
 </body>
+    <!-- Kommentar zum Auslösen des Builds -->
+<!-- Build test -->
+
 </html>
+
 
 
