--- a/sojamaggus-site/index.html
+++ b/sojamaggus-site/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sojamaggus</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -14,7 +14,9 @@
     <main>
         <section id="hero">
             <div id="sojamaggus-container">
-                <img src="images/sojamaggus_closed.PNG" alt="Sojamaggus" id="sojamaggus">
+                <img src="images/sojamaggus_closed.PNG" id="sojamaggus">
+                <img src="images/sojamaggus_open.PNG" id="sojamaggus">
+
                 <div id="speech-bubble">...</div>
             </div>
             
@@ -25,12 +27,13 @@
         </section>
     </main>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
     <!-- Kommentar zum Auslösen des Builds -->
 <!-- Build test -->
 
 </html>
+
 
 
 
