--- a/sojamaggus-site/index.html
+++ b/sojamaggus-site/index.html
@@ -14,9 +14,7 @@
     <main>
         <section id="hero">
             <div id="sojamaggus-container">
-                <img src="images/sojamaggus_closed.PNG" id="sojamaggus">
-                <img src="images/sojamaggus_open.PNG" id="sojamaggus">
-
+                <img src="images/sojamaggus_closed.PNG" alt="Sojamaggus" id="sojamaggus">
                 <div id="speech-bubble">...</div>
             </div>
             
@@ -29,11 +27,4 @@
 
     <script src="js/script.js"></script>
 </body>
-    <!-- Kommentar zum Auslösen des Builds -->
-<!-- Build test -->
-
 </html>
-
-
-
-
