--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         </section>
     </main>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
+
 
