--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <section id="hero">
             <div id="sojamaggus-container">
-                <img src="images/sojamaggus_closed.PNG" alt="Sojamaggus" id="sojamaggus">
+                <img src="sojamaggus_closed.PNG" alt="Sojamaggus" id="sojamaggus">
                 <div id="speech-bubble">...</div>
             </div>
             
@@ -28,5 +28,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
