--- a/index.html
+++ b/index.html
@@ -8,14 +8,34 @@
 <body>
   <h1>Sojamaggus sagt...</h1>
 
-  <img id="sojamaggus" src="sojamaggus_closed.PNG" alt="Sojamaggus">
-  <div id="speech-bubble">Tippe ein Thema ein und klick auf "Sag was!"</div>
+  <!-- Figur mit Bubbles -->
+  <div id="sojamaggus-wrapper">
+    <img id="sojamaggus" src="sojamaggus_closed.png" alt="Sojamaggus">
 
-  <div id="input-area">
-    <input type="text" id="userInput" placeholder="z.B. Fleisch, Windräder...">
-    <button id="talkButton">Sag was!</button>
+    <div id="hint-bubbles">
+      <span class="bubble">Fleisch</span>
+      <span class="bubble">Windräder</span>
+      <span class="bubble">Bayern</span>
+      <span class="bubble">Klimawandel</span>
+      <span class="bubble">Parteien</span>
+      <span class="bubble">Frauen</span>
+      <span class="bubble">Gendern</span>
+      <span class="bubble">Die Grünen</span>
+      <span class="bubble">CSU</span>
+      <span class="bubble">Söder</span>
+      <span class="bubble">AfD</span>
+    </div>
   </div>
 
-  <script src="script.js"></script>
+  <!-- Sprechblase -->
+  <div id="speech-bubble">Tippe ein Thema ein und klick auf "Sag was!"</div>
+
+  <!-- Eingabefeld -->
+  <div id="input-area">
+    <input type="text" id="userInput" placeholder="z.B. Fleisch, Windräder...">
+    <button onclick="talk()">Sag was!</button>
+  </div>
 </body>
+
 </html>
+
