--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Figur mit Bubbles -->
   <div id="sojamaggus-wrapper">
-    <img id="sojamaggus" src="sojamaggus_closed.png" alt="Sojamaggus">
+    <img id="sojamaggus" src="sojamaggus_closed.PNG" alt="Sojamaggus">
 
     <!-- Themen-Bubbles -->
     <div id="hint-bubbles">
@@ -41,3 +41,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
