--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
   <h1>Sojamaggus sagt...</h1>
 
-  <!-- Figur mit Bubbles -->
   <div id="sojamaggus-wrapper">
     <img id="sojamaggus" src="sojamaggus_closed.PNG" alt="Sojamaggus">
 
@@ -23,16 +21,11 @@
       <span class="bubble">Frauen</span>
       <span class="bubble">Gendern</span>
       <span class="bubble">Die Grünen</span>
-      <span class="bubble">CSU</span>
-      <span class="bubble">Söder</span>
-      <span class="bubble">AfD</span>
     </div>
   </div>
 
-  <!-- Sprechblase -->
-  <div id="speech-bubble">Tippe ein Thema ein oder klick auf eine Bubble!</div>
+  <div id="speech-bubble">Tippe ein Thema ein oder klicke auf eine Bubble!</div>
 
-  <!-- Eingabefeld -->
   <div id="input-area">
     <input type="text" id="userInput" placeholder="z.B. Fleisch, Windräder...">
     <button onclick="talk()">Sag was!</button>
@@ -41,4 +34,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
