--- a/index.html
+++ b/index.html
@@ -29,8 +29,18 @@
   <div id="input-area">
     <input type="text" id="userInput" placeholder="z.B. Fleisch, Windräder...">
     <button onclick="talk()">Sag was!</button>
-  </div>
-
-  <script src="script.js"></script>
+ </div>
+  <h3>Keine Idee? Hier etwas Inspiration:</h3>
+  <div id="hint-bubbles">
+    <div class="bubble">Fleisch</div>
+    <div class="bubble">Windräder</div>
+    <div class="bubble">Bayern</div>
+    <div class="bubble">Klimawandel</div>
+    <div class="bubble">Parteien</div>
+    <div class="bubble">Frauen</div>
+    <div class="bubble">Gendern</div>
+    <div class="bubble">Die Grünen</div>
+   <script src="script.js"></script>
 </body>
 </html>
+
