--- a/index.html
+++ b/index.html
@@ -10,28 +10,17 @@
 
   <div id="sojamaggus-wrapper">
     <img id="sojamaggus" src="sojamaggus_closed.PNG" alt="Sojamaggus">
-
-    <!-- Themen-Bubbles -->
-    <div id="hint-bubbles">
-      <span class="bubble">Fleisch</span>
-      <span class="bubble">Windräder</span>
-      <span class="bubble">Bayern</span>
-      <span class="bubble">Klimawandel</span>
-      <span class="bubble">Parteien</span>
-      <span class="bubble">Frauen</span>
-      <span class="bubble">Gendern</span>
-      <span class="bubble">Die Grünen</span>
-    </div>
   </div>
 
-  <div id="speech-bubble">Tippe ein Thema ein oder klicke auf eine Bubble!</div>
+  <div id="speech-bubble">Tippe ein Thema ein oder klicke auf eine Inspiration!</div>
 
   <div id="input-area">
     <input type="text" id="userInput" placeholder="z.B. Fleisch, Windräder...">
     <button onclick="talk()">Sag was!</button>
- </div>
+  </div>
+
   <h3>Keine Idee? Hier etwas Inspiration:</h3>
-  <div id="hint-bubbles">
+  <div id="hint-buttons">
     <div class="bubble">Fleisch</div>
     <div class="bubble">Windräder</div>
     <div class="bubble">Bayern</div>
@@ -40,7 +29,8 @@
     <div class="bubble">Frauen</div>
     <div class="bubble">Gendern</div>
     <div class="bubble">Die Grünen</div>
-   <script src="script.js"></script>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
-
