--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
 
   <div id="sojamaggus-wrapper">
     <img id="sojamaggus" src="sojamaggus_closed.PNG" alt="Sojamaggus">
-  </div>
 
-  <div id="speech-bubble">Tippe ein Thema ein oder klicke auf eine Inspiration!</div>
+    <!-- Sprechblase direkt unter dem Bild -->
+    <div id="speech-bubble">Tippe ein Thema ein oder klicke auf eine Bubble!</div>
 
-  <div id="input-area">
-    <input type="text" id="userInput" placeholder="z.B. Fleisch, Windräder...">
-    <button onclick="talk()">Sag was!</button>
+    <!-- Eingabefeld -->
+    <div id="input-area">
+      <input type="text" id="userInput" placeholder="z.B. Fleisch, Windräder...">
+      <button onclick="talk()">Sag was!</button>
+    </div>
   </div>
 
   <h3>Keine Idee? Hier etwas Inspiration:</h3>
-  <div id="hint-buttons">
+  <div id="inspiration-bubbles">
     <div class="bubble">Fleisch</div>
     <div class="bubble">Windräder</div>
     <div class="bubble">Bayern</div>
